fixed alignment of images (mainly mhw ones)

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -20,6 +20,10 @@ body{background-color:#00ffcc;
     
 }
 
+#games{
+    display: block;
+}
+
 #profile{
     background-color: #0066ff;
     float: left;
@@ -28,5 +32,14 @@ body{background-color:#00ffcc;
     outline-width: 10px;
     text-align: left;
     padding: 5px
+}
 
+#guildCard{
+    float: left;
+    margin-right:100px;
+}
+
+#scs{
+    float: left;
+    margin-left: 100px;
 }
